tests/spec/format/snapshots/mixed_trailing_and_leading_statement_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    let x = 1 // trailing on x
    // leading for y
    let y = 2
  }
---
fn test() {
  let x = 1 // trailing on x
  // leading for y
  let y = 2
}
