tests/spec/format/snapshots/mixed_trailing_and_leading_struct_field_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Mix {
    a: int, // trailing on a
    // leading for b
    b: string,
  }
---
struct Mix {
  a: int, // trailing on a
  // leading for b
  b: string,
}
