tests/spec/format/snapshots/module_imports_and_definitions.snap
---
source: tests/spec/format/mod.rs
description: |-
  import "go:os"
  import "go:fmt"
  
  fn main() { fmt.Println("hello") }
---
import "go:fmt"
import "go:os"

fn main() {
  fmt.Println("hello")
}
