tests/spec/format/snapshots/module_only_comments.snap
---
source: tests/spec/format/mod.rs
description: |-
  // Generated by bindgen
  // Source: crypto/hkdf
---
// Generated by bindgen
// Source: crypto/hkdf
