tests/spec/format/snapshots/module_trailing_comment.snap
---
source: tests/spec/format/mod.rs
description: "input: fn main() {}\n\n// end of file"
---
fn main() {}

// end of file
