tests/spec/format/snapshots/or_pattern_enum.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match color { Red | Green => \"warm\", Blue => \"cool\" } }"
---
fn test() {
  match color {
    Red | Green => "warm",
    Blue => "cool",
  }
}
