tests/spec/format/snapshots/or_pattern_multiline.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    match x {
      1 | 2 | 3 => "small",
      4 | 5 | 6 => "medium",
      _ => "large",
    }
  }
---
fn test() {
  match x {
    1 | 2 | 3 => "small",
    4 | 5 | 6 => "medium",
    _ => "large",
  }
}
