tests/spec/format/snapshots/or_pattern_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match x { 1 | 2 | 3 => \"small\", _ => \"other\" } }"
---
fn test() {
  match x {
    1 | 2 | 3 => "small",
    _ => "other",
  }
}
