tests/spec/format/snapshots/or_pattern_strings.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match s { \"yes\" | \"y\" => true, \"no\" | \"n\" => false, _ => false } }"
---
fn test() {
  match s {
    "yes" | "y" => true,
    "no" | "n" => false,
    _ => false,
  }
}
