tests/spec/format/snapshots/or_pattern_with_binding.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match opt { Some(x) | Some(x) => x, None => 0 } }"
---
fn test() {
  match opt {
    Some(x) | Some(x) => x,
    None => 0,
  }
}
